@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2024-01-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-02-06T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-07T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
